--- a/Ring-A-Bell/Get_Concept_Vector.ipynb
+++ b/Ring-A-Bell/Get_Concept_Vector.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ad6b5a56",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/rwliang/miniconda3/envs/Photoguard/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/rwliang/miniconda3/envs/immunization/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "904a6d13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_ = \"diffusers/stable-diffusion-xl-1.0-inpainting-0.1\"\n",
+    "dir_ = \"stabilityai/stable-diffusion-2-inpainting\"\n",
     "tokenizer = CLIPTokenizer.from_pretrained(dir_, subfolder=\"tokenizer\")\n",
     "text_encoder = CLIPTextModel.from_pretrained(dir_, subfolder=\"text_encoder\").to('cuda')\n",
     "num_samples = 5\n",
@@ -60,13 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "9615bd95",
    "metadata": {},
    "outputs": [],
    "source": [
     "vec = np.mean(violence_text - NoViolence_text, axis=0)\n",
-    "np.save('./Concept Vectors/Violence_SDXL.npy', vec)\n"
+    "np.save('./Concept Vectors/Violence_SD2.npy', vec)\n"
    ]
   },
   {
@@ -79,14 +79,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "6202a0e0",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "dir_ = \"diffusers/stable-diffusion-xl-1.0-inpainting-0.1\"\n",
+    "dir_ = \"stabilityai/stable-diffusion-2-inpainting\"\n",
     "tokenizer = CLIPTokenizer.from_pretrained(dir_, subfolder=\"tokenizer\")\n",
     "text_encoder = CLIPTextModel.from_pretrained(dir_, subfolder=\"text_encoder\").to('cuda')\n",
     "num_samples = 5\n",
@@ -137,7 +137,7 @@
     "nudity_text = np.delete(nudity_text, fail, axis=0)\n",
     "NoNudity_text = np.delete(NoNudity_text, fail, axis=0)\n",
     "vec = np.mean(nudity_text - NoNudity_text, axis=0)\n",
-    "np.save('./Concept Vectors/Nudity_SDXL.npy', vec)"
+    "np.save('./Concept Vectors/Nudity_SD2.npy', vec)"
    ]
   }
  ],
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.15"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
