--- a/src/eval_visualize.ipynb
+++ b/src/eval_visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -56,28 +56,36 @@
      "output_type": "stream",
      "text": [
       "/advdm_eps16_steps100_gmode+/\n",
-      "29.637 0.768 0.266 28.246\n",
+      "28.923 0.757 0.317\n",
+      "28.609 0.55 0.414 26.911\n",
       "---------------\n",
       "/advdm_eps16_steps100_gmode-/\n",
-      "29.581 0.76 0.167 27.978\n",
+      "28.694 0.732 0.289\n",
+      "28.472 0.514 0.448 26.153\n",
       "---------------\n",
       "/mist_eps16_steps100_gmode+/\n",
-      "29.536 0.724 0.247 27.881\n",
+      "28.87 0.744 0.302\n",
+      "28.518 0.494 0.464 26.535\n",
       "---------------\n",
       "/sds_eps16_steps100_gmode+/\n",
-      "29.946 0.768 0.263 28.541\n",
+      "29.214 0.765 0.317\n",
+      "28.772 0.589 0.382 26.696\n",
       "---------------\n",
       "/sds_eps16_steps100_gmode-/\n",
-      "30.328 0.781 0.145 27.864\n",
+      "29.289 0.745 0.289\n",
+      "28.562 0.505 0.462 26.835\n",
       "---------------\n",
       "/sdsT5_eps16_steps100_gmode-/\n",
-      "29.57 0.738 0.216 28.153\n",
+      "29.109 0.755 0.281\n",
+      "28.527 0.502 0.45 26.404\n",
       "---------------\n",
       "/texture_only_eps16_steps100_gmode+/\n",
-      "29.682 0.721 0.246 28.049\n",
+      "29.03 0.74 0.305\n",
+      "28.524 0.491 0.474 25.818\n",
       "---------------\n",
       "/none/\n",
-      "100.0 1.0 0.0 28.266\n",
+      "100.0 1.0 0.0\n",
+      "100.0 1.0 0.0 26.683\n",
       "---------------\n"
      ]
     }
@@ -92,8 +100,12 @@
     "    inpaint_metrics = torch.load(metrics_dir + 'inpaint_metrics.bin')\n",
     "    \n",
     "    print(get_dir_name_from_config(mode, g_mode, using_target, target_rate=target_rate, prefix=\"\"))\n",
+    "\n",
     "    print(mean(adv_metrics[\"psnr\"]), mean(adv_metrics[\"ssim\"]),\n",
-    "            mean(adv_metrics[\"lpips\"]), mean(inpaint_metrics[\"clip_score\"]))\n",
+    "            mean(adv_metrics[\"lpips\"]))\n",
+    "\n",
+    "    print(mean(inpaint_metrics[\"psnr\"]), mean(inpaint_metrics[\"ssim\"]),\n",
+    "            mean(inpaint_metrics[\"lpips\"]), mean(inpaint_metrics[\"clip_score\"]))\n",
     "    print(\"---------------\")\n"
    ]
   }
